--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@
   - bin/open -> some file browser?
   - (tree -> broot or something else??)
 
-* Install some file browser; playerctl?; set up picom?
+* Install some file browser; playerctl?; configure picom?
 
 * Remove the _already unused_ Ligaturizer fork from my GitHub (from Fira days).
 
