--- a/TODO
+++ b/TODO
@@ -1,10 +1,4 @@
-* Replace:
-  - neovim -> helix
-  - ctags -> nothing?
-  - bin/open -> some file browser?
-  - (tree -> broot or something else??)
-
-* Install some file browser; playerctl?; configure picom?
+* playerctl?
 
 * Remove the _already unused_ Ligaturizer fork from my GitHub (from Fira days).
 
